outputs_20260330-104711-42a4e208/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\src\egtm_atom_3_phase_inverter_pwm.c:15:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\include/IfxEgtm_Pwm.h:203:28: error: conflicting types for 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT'; have 'IfxEgtm_Pwm_ToutMap'
  203 | extern IfxEgtm_Pwm_ToutMap IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT;
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\include/Ifx_Types.h:3,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\src\egtm_atom_3_phase_inverter_pwm.c:14:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\include/mock_egtm_atom_3_phase_inverter_pwm.h:171:39: note: previous declaration of 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT' with type 'struct IfxEgtm_Pwm_ToutMap_tag'
  171 | extern struct IfxEgtm_Pwm_ToutMap_tag IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT;
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:7:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\include/IfxEgtm_Pwm.h:203:28: error: conflicting types for 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT'; have 'IfxEgtm_Pwm_ToutMap'
  203 | extern IfxEgtm_Pwm_ToutMap IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT;
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:4:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\include/mock_egtm_atom_3_phase_inverter_pwm.h:171:39: note: previous declaration of 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT' with type 'struct IfxEgtm_Pwm_ToutMap_tag'
  171 | extern struct IfxEgtm_Pwm_ToutMap_tag IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT;
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\test\test_egtm_atom_3_phase_inverter_pwm.c: In function 'test_TC_G1_001_init_calls_target_APIs_and_init_once_disabled':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\test\test_egtm_atom_3_phase_inverter_pwm.c:38:5: error: 'mock_IfxEgtm_Cmu_isEnabled_returnValue' undeclared (first use in this function); did you mean 'mock_IfxEgtm_isEnabled_returnValue'?
   38 |     mock_IfxEgtm_Cmu_isEnabled_returnValue = FALSE;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |     mock_IfxEgtm_isEnabled_returnValue
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\test\test_egtm_atom_3_phase_inverter_pwm.c:38:5: note: each undeclared identifier is reported only once for each function it appears in
In file included from C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity.h:22,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\test\test_egtm_atom_3_phase_inverter_pwm.c:1:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\test\test_egtm_atom_3_phase_inverter_pwm.c:51:41: error: implicit declaration of function 'mock_IfxPort_setPinModeOutput_getCallCount'; did you mean 'mock_IfxPort_togglePin_getCallCount'? [-Wimplicit-function-declaration]
   51 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(1, mock_IfxPort_setPinModeOutput_getCallCount(), "LED pin should be configured as output once after PWM init");
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\test\test_egtm_atom_3_phase_inverter_pwm.c:51:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
   51 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(1, mock_IfxPort_setPinModeOutput_getCallCount(), "LED pin should be configured as output once after PWM init");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\test\test_egtm_atom_3_phase_inverter_pwm.c: In function 'test_TC_G1_002_init_when_already_enabled_does_not_enable_again':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_aeeehetm\test\test_egtm_atom_3_phase_inverter_pwm.c:58:5: error: 'mock_IfxEgtm_Cmu_isEnabled_returnValue' undeclared (first use in this function); did you mean 'mock_IfxEgtm_isEnabled_returnValue'?
   58 |     mock_IfxEgtm_Cmu_isEnabled_returnValue = TRUE;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |     mock_IfxEgtm_isEnabled_returnValue
